<resources>
    <string name="app_name">Bai3</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_back">Back</string>
    <string name="btn_next">Next</string>
    <string name="btn_on">On</string>
    <string name="btn_off">Off</string>
    <string name="btn_mc">MC</string>
    <string name="btn_mr">MR</string>
    <string name="btn_mplus">M+</string>
    <string name="btn_msub">M-</string>
    <string name="btn_div">/</string>
    <string name="btn_mul">X</string>
    <string name="btn_sub">-</string>
    <string name="btn_plus">+</string>
    <string name="btn_ps">+/-</string>
    <string name="btn_mod">%</string>
    <string name="btn_pow">^</string>
    <string name="btn_ac">AC</string>
    <string name="btn_dot">.</string>
    <string name="btn_eq">=</string>
</resources>
