<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <TextView
            android:id="@+id/tv_computation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="10 + 1"
            android:layout_marginLeft="10dp"
            android:textSize="12pt"
            android:textStyle="bold"
            android:textColor="#333"/>
        <TextView
            android:id="@+id/tv_result"
            android:layout_below="@id/tv_computation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="11"
            android:layout_marginLeft="10dp"
            android:textSize="12pt"
            android:textStyle="bold"
            android:textColor="#333"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/linear_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/linear_4"
        android:gravity="right"
        android:orientation="horizontal"
        android:weightSum="5">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#000"
            android:text="@string/btn_on"
            android:textColor="#FFF"
            android:margin="2dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#000"
            android:text="@string/btn_off"
            android:textColor="#FFF"
            android:margin="2dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/linear_3">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#000"
            android:text="@string/btn_plus"
            android:textColor="#FFF"
            android:margin="2dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#000"
            android:text="@string/btn_mc"
            android:textColor="#FFF"
            android:margin="2dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#000"
            android:text="@string/btn_mr"
            android:textColor="#FFF"
            android:margin="2dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#000"
            android:text="@string/btn_msub"
            android:margin="2dp"
            android:textColor="#FFF" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#000"
            android:text="@string/btn_div"
            android:textColor="#FFF"
            android:margin="2dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/linear_2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#000"
            android:text="@string/btn_ps"
            android:textColor="#FFF"
            android:margin="2dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#000"
            android:text="@string/btn_7"
            android:textColor="#FFF"
            android:margin="2dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#000"
            android:text="@string/btn_8"
            android:textColor="#FFF"
            android:margin="2dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#000"
            android:margin="2dp"
            android:text="@string/btn_9"
            android:textColor="#FFF" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#000"
            android:text="@string/btn_mul"
            android:textColor="#FFF"
            android:margin="2dp" />
    </LinearLayout>
    <LinearLayout
        android:weightSum="5"
        android:id="@+id/linear_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/linear_1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#000"
            android:text="@string/btn_mod"
            android:textColor="#FFF"
            android:margin="2dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#000"
            android:text="@string/btn_4"
            android:textColor="#FFF"
            android:margin="2dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#000"
            android:text="@string/btn_5"
            android:textColor="#FFF"
            android:margin="2dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#000"
            android:text="@string/btn_6"
            android:textColor="#FFF"
            android:margin="2dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#000"
            android:text="@string/btn_sub"
            android:textColor="#FFF"
            android:margin="2dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="5">
        <LinearLayout
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentRight="true">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000"
                    android:text="@string/btn_pow"
                    android:textColor="#FFF"
                    android:margin="2dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000"
                    android:text="@string/btn_1"
                    android:textColor="#FFF"
                    android:margin="2dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000"
                    android:text="@string/btn_2"
                    android:textColor="#FFF"
                    android:margin="2dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000"
                    android:text="@string/btn_3"
                    android:textColor="#FFF"
                    android:margin="2dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentRight="true">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000"
                    android:text="@string/btn_ac"
                    android:textColor="#FFF"
                    android:margin="2dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000"
                    android:text="@string/btn_0"
                    android:textColor="#FFF"
                    android:margin="2dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000"
                    android:text="@string/btn_dot"
                    android:textColor="#FFF"
                    android:margin="2dp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000"
                    android:text="@string/btn_eq"
                    android:textColor="#FFF"
                    android:margin="2dp" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#000"
                android:text="@string/btn_plus"
                android:textColor="#FFF"
                android:margin="2dp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
